fix footer hover styles & spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,7 +17,7 @@ footer {
   margin-top: 0;
 }
 
-#footer__logo {
+.footer__logo {
   margin: 2rem 0;
 }
 
@@ -53,9 +53,20 @@ footer {
   padding: 0 2rem;
 }
 
-.footer__social-media svg:hover {
+.footer__social-media a:hover {
   cursor: pointer;
-  border-bottom: 2px solid hsl(0, 0%, 100%);
+  /* border-bottom: 2px solid hsl(0, 0%, 100%); */
+}
+
+.footer__social-media a:hover::after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 40%;
+  top: 25%;
+  left: 30%;
+  border-top: 1px solid white;
+  height: 0;
 }
 
 .footer__nav-link {
@@ -89,11 +100,25 @@ footer {
     justify-items: normal;
   }
 
+  /* .footer__logo {
+    margin-bottom: 2rem
+  } */
+
+  /* .footer__logo-container {
+    margin-bottom: 1rem;
+  } */
+
   .footer__nav-links {
     flex-direction: row;
     justify-content: start;
     align-items: center;
+    height: 3ch;
   }
+
+  /*   .footer__nav-link {
+    margin-bottom: 0;
+    padding-bottom: 2.5rem;
+  } */
 
   .footer__nav-link:not(:first-of-type) {
     margin-left: 2rem;
@@ -111,17 +136,28 @@ footer {
     display: flex;
     justify-content: end;
     padding: 0;
+    margin-top: 2.2rem;
   }
 
-  .footer__social-media svg path {
-    padding-bottom: 0.5rem;
-  }
+  /* .footer__social-media svg path {
+    padding-bottom: 1rem;
+  } */
 
-  .footer__social-media svg:not(:last-of-type) {
+  .footer__social-media a:not(:last-of-type) {
     margin-right: 1rem;
   }
 
+  .footer__text-container {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+  }
+
   .footer__credit {
-    margin-bottom: 1.5rem;
+    height: 2ch;
+    margin: 0;
+    padding-bottom: 2rem;
   }
 }
