--- a/css/landing.css
+++ b/css/landing.css
@@ -22,7 +22,7 @@
   font-family: var(--josefin-sans);
   text-transform: uppercase;
   color: var(--white);
-  font-size: 42px;
+  font-size: 2.5rem;
   width: 80%;
   padding: 1rem;
   border: 1px solid var(--white);
